# nucypher

./: .bandit  .bumpversion.cfg  .codeclimate.yml  .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .nucypher-license  .nucypher.ini  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  NuCypher_Beachhead.ipynb  Pipfile  README.md  SECURITY.md  alicia.py  ape-config.yaml  app.py  architecture.rst  bob.py  buildout.cfg  codecov.yml  config.yaml  constraints.txt  demo_keys.py  deploy_tester.py  dev-requirements.txt  docs-requirements.txt  enrico.py  first_run.py  generate-heartbeats.py  heartbeat_demo.md  install.sh  (+15 more)
.circleci/: config.yml  goerli.toml  install_circle_cli.sh  pytest.ini  trigger_job.sh  validate-hook.sh
.circleci/docker/: Dockerfile  README.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: contract_tests.yml  darker.yml  docker.yml  docker_hub.yml  label.yml  lynx-docker.yml  lynx-label.yml  lynx.yml  newsfragment.yml  pr-merge.yml  pr_release_note_entry.yml  pypi.yml  python_tests.yml  ruff.yaml  ruff.yml  run_demo.yml  tests.yml  towncrier.yml
apps/connectnative/: README.md  background.js  content.js  manifest.json  modify-content.js  nacl-util.js  nucypher.json  popup.html
apps/faucet/: README.md  jest.config.js  package.json  vue.config.js
assets/: stylesheet.css
cli/: .nucypher.ini  __init__.py  main.py  run_ursula.py
cli/demos/: finnegans-wake-demo.py
contracts/: Escrow.sol  EscrowV2.sol  Greeter.sol  HumanStandardToken.sol  LinkedList.sol  MineableToken.sol  Miner.sol
contracts/tests/: LinkedListTest.sol
deploy/: learning_monitor.py  networks.json  static-nodes.json
deploy/ansible/: ansible.cfg  provision.yml  restart_all.yml  run_seednodes.yml  terminate.yml  update.yml  variables.template.yml  wipe_ursula_config.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/geth/: custom_genesis.json  genesis.json  initialize_blockchain.sh  install_geth_ubuntu.sh  launch_bootnode.sh  launch_node.sh
deploy/k8s/: GethDockerfile  README.md  config-demo  dashboard-adminuser.yaml  geth-stateful-service.yml  subdomain.json  ursula_deployment.yml  ursula_pod.yml
deploy/parity/: install_parity_ubuntu.sh  launch_node.sh  reserved_peers.txt
deploy/services/: eth_netstats.j2  felix_faucet.j2  firstula_node.j2  geth_bootnode.j2  geth_miner.j2  moe_monitor.j2  ursula_node.j2
deploy/templates/: monitor.html
dev/docker/: 3-ursulas.yml  8-federated-ursulas.yml  Dockerfile  Dockerfile-pg  README.md  docker-compose.yml  eth-dev.yml  felix-ganache.yml
doc/: NuCypher_Beachhead.ipynb  architecture.rst  contracts.md  contracts.rst
docs/: Makefile  NuCypher_Beachhead.ipynb  architecture.rst  requirements.txt
docs/source/: conf.py  environment_variables.rst  ethereum_node.rst  getting_started.rst  glossary.rst  http_character_control.rst  index.rst  installation.rst  quickstart.md  signers.rst
entry_points/: run_local_server.py  run_ursula_mining_node.py  run_ursula_with_rest_and_dht_but_no_mining.py
examples/: .env.template  alice_sets_policy_with_ursula.py  alicebob-grant-and-line-by-line-PRE.py  coinlist-demo.rst  finnegans-wake-concise-demo.py  finnegans-wake-demo.py  finnegans-wake-federated.py  local_simple_taco.py  populate_mario_box.py  run_demo_ursula_fleet.py  run_demo_ursulas.py  run_federated_ursula.py  run_lonely_demo_ursula.py  run_single_demo_ursula.py  run_ursula_with_rest_and_dht_but_no_mining.py  sandbox_resources.py  set_dht_value_without_listening.py  testnet_compound_multichain_taco.py  testnet_simple_taco.py  tubes_shared.py
examples/cli_demo/: alice-grant.sh  bob-retrieve.sh
examples/finnegans_wake_demo/: README.md  (+12 more)
heartbeat_demo_ui/: bob.py
newsfragments/: 2051.misc.rst  2093.misc.rst  2094.doc.rst  2115.feature.rst  2346.doc.rst  2352.misc.rst  2365.feature.rst  2369.bugfix.rst  2371.bugfix.rst  2390.bugfix.rst  2395.bugfix.rst  2396.feature.rst  2402.misc.rst  2406.bugfix.rst  2412.bugfix.rst  2415.misc.rst  2416.bugfix.rst  2420.feature.rst  2421.bugfix.rst  2422.bugfix.rst  2423.bugfix.rst  2425.feature.rst  2426.misc.rst  2427.bugfix.rst  2431.misc.rst  2434.doc.rst  2439.misc.rst  2440.misc.rst  2441.bugfix.rst  2445.feature.rst  2446.misc.rst  2450.feature.rst  2451.misc.rst  2452.bugfix.rst  2457.misc.rst  2458.misc.rst  2459.feature.rst  2460.feature.rst  2461.misc.rst  2462.feature.rst  (+324 more)
nkms/: __init__.py  characters.py  client.py  data_sources.py  db.py
nkms_eth/: actors.py  agents.py  base.py  blockchain.py  config.py  deploy.py  deployers.py  escrow.py  miner.py  policies.py  token.py  ursula.py  utilities.py
nucypher/: __about__.py  __init__.py  characters.py  cli.py  core.py  data_sources.py  exceptions.py  primitives.py  types.py
nucypher_cli/: .nucypher.ini  main.py  metadata.py  run_ursula.py
registries/: README.md
scripts/: cli.py  deploy_tester.py  deploy_then_stake.sh  estimate_gas_tester.py  install_solc.sh  network_client_versions.py  nucypher_agents.py  nucypher_dkg.py  pipenv_setup.sh  relock_dependencies.sh  retrytx.py  smoketest_package.py  ursula_flow.py  validate_circleci_config.sh  validate_config.sh
tests/: None  __init__.py  conftest.py  constants.py  eth_fixtures.py  fixtures.py  markers.py  performance_mocks.py  run_tests.py  test_api.py  test_blockchain.py  test_client.py  test_db.py  test_default_crypto.py  test_escrow.py  test_escrow_module.py  test_escrow_v2.py  test_fixtures.py  test_kmac.py  test_linked_list.py  test_math.py  test_miner.py  test_network.py  test_network_actors.py  test_network_traffic.py  test_nucypher_kms_token.py  test_package.py  test_populus_project.py  test_token.py  test_token_module.py  test_ursula.py  test_utilities.py  utilities.py
vehicle_data_exchange/: app.py  bob.py  demo_keys.py  vehicle_data_exchange.py
wheelhouse/: cryptography-2.3.dev1-cp35-cp35m-linux_x86_64.whl  cryptography-2.3.dev1-cp36-cp36m-linux_x86_64.whl  cryptography-2.3.dev1-cp36-cp36m-macosx_10_13_x86_64.whl
(+1843 files in other folders)
